[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    dffml @ https://github.com/intel/dffml/archive/fe0fe1268a9dac07f6d63bef049f4af032b04157.zip
    tensorflow>=2.0.0
    pandas>=0.25.0
    # See https://github.com/intel/dffml/issues/816
    numpy>=1.16.4,<1.19.0
    seqeval>=0.0.12
    fastprogress>=0.2.2
    # See https://github.com/intel/dffml/issues/844
    transformers>=3.0.2,<3.1.0
    torch>=1.5.0
